New for 20090722 release:

  - added support for JavaScript 1.8 function closures
    - set `js2-language-version' default to 180
  - changed `js2-auto-indent-flag' to `js2-auto-indent-p'
  - changed `js2-bounce-indent-flag' to `js2-bounce-indent-p'
  - added js2-externs.el with some predefined browser externs
  - added `js2-additional-externs' for user-defined externs
  - went back to using c-fill-paragraph
  - bug fix for matching curly braces
  - added support for auto-completing try/catch blocks
  - set mode-specific c-comment-start-regexp
  - added 4-space indent option for expression continuation lines
  - completely overhauled "magic"-paren logic to be less annoying
    and more like the Eclipse behavior it was originally inspired by:
    - autoinserted parens/brackets are now highlighted
    - if you make an edit on a different line, all magic turns off
    - we only auto-overwrite a paren/bracket if it's currently magic
    - we highlight magic parens with `js2-magic-paren-face'
    - auto-overwriting a magic delimiter makes it nonmagic
    - auto-insert if next char on line is puncutation, or if at eol
  - we no longer auto-insert a close-curly if the next non-whitespace
    character in the buffer is a close-curly with an error overlay.
  - added `js2-auto-insert-catch-block' defcustom variable,
    to configure auto-insertion of catch-blocks
  - prefix-arg plus open-curly => close-curly becomes magic

Since 2008330:

  - fixed broken installation instructions

  - added `js2-language-version' custom variable that defaults
    to 150, for JavaScript 1.5.  If you set it to 160, you get
    E4X support, and 170 adds let, yield, and array comprehensions.

  - added new warning for missing semicolon (auto-insertion)
    - configured via js2-strict-missing-semi-warning

  - fixed default indentation for first line of an object
    literal being passed as the first parameter to a function:
    most people want this indented from previous line, not